# CrewLoop

./: .gitignore  AGENTS.md  LICENSE.md  README.md  package-lock.json  package.json
architect/: SKILL.md
designer/: SKILL.md
docs/: docusaurus.config.js  index.html  package-lock.json  package.json  sidebars.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
engineer/: SKILL.md
evals/: evals.json  trigger-eval.json
orchestrator/: SKILL.md
react-ts/: scaffold.txt
references/: conventions.md  obsidian-mcp-usage.md  skill-anatomy.md  skill-contracts.yaml  workflow.md
servers/obsidian-mcp/: README.md  pyproject.toml
servers/obsidian-mcp/src/obsidian_mcp/: config.py  main.py  models.py  server.py
servers/obsidian-mcp/src/obsidian_mcp/indexer/: embeddings.py  indexer.py  store.py  sync.py
servers/obsidian-mcp/src/obsidian_mcp/learning/: detector.py  note_generator.py
servers/obsidian-mcp/src/obsidian_mcp/privacy/: filter.py
servers/obsidian-mcp/src/obsidian_mcp/rag/: engine.py  graph_search.py  text_search.py  vector_search.py
servers/obsidian-mcp/src/obsidian_mcp/tools/: create.py  delete.py  learn.py  list.py  read.py  registry.py  related.py  search.py  sync.py  update.py
servers/obsidian-mcp/src/obsidian_mcp/vault/: parser.py  repository.py  writer.py
servers/obsidian-mcp/tests/: conftest.py  test_async_tools.py  test_edge_cases.py  test_indexer.py  test_integration.py  test_learning.py  test_privacy.py  test_privacy_config.py  test_rag.py  test_read_raw.py  test_tfidf_fallback.py  test_tools.py  test_vault.py  test_writer.py
(+861 files in other folders)
